# wirispro_manager_panel

./: CMakeLists.txt  README.md  package.xml  resources.qrc  wirispro_manager_panel_description.xml
include/wirispro_manager_panel/: QStreamer.h  WirisProManagerWidget.h  WirisProRvizPanel.h  camerastreamer.h  streamthread.h  thermalthread.h  visiblethread.h
src/: WirisProManagerWidget.cpp  WirisProManagerWidget.ui  WirisProRvizPanel.cpp
src/utils/: QStreamer.cpp  thermalthread.cpp  visiblethread.cpp
