<?xml version="1.0"?>
<package format="2">
  <name>wirispro_manager_panel</name>
  <version>0.0.0</version>
  <description>The wirispro_manager_panel package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mgil8@us.es">Miguel Gil Castilla</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>wirispro_manager</build_depend>
  <build_depend>gremsy_base</build_depend>

  <build_depend>qtbase5-dev</build_depend>

  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>wirispro_manager</build_export_depend>  
  <build_export_depend>gremsy_base</build_export_depend>

  <build_export_depend>qtbase5-dev</build_export_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>wirispro_manager</exec_depend>
  <exec_depend>gremsy_base</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <rviz plugin="${prefix}/wirispro_manager_panel_description.xml"/>
  </export>
</package>
